# Glean

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  config.example.yaml  decisions.md  docker-compose.yml  fly.toml  glossary.md  plan.md  pyproject.toml
.github/workflows/: deploy-fly.yml
db/migrations/: 20260111000001_initial_schema.py  20260111000002_add_users_table.py  20260111000003_add_settings_table.py  20260111000004_add_jobs_table.py  20260118000001_add_jobs_logs_column.py
docs/: DEPLOYMENT.md  DEVELOPMENT.md  OPERATIONS.md  web-ui-design.md
scripts/: deploy.sh  dev.sh  quality_report.py
src/: cli.py  config.py  database.py  migrations.py
src/analyzers/: __init__.py  base.py  claude.py
src/curator/: __init__.py  curator.py  dedup.py  scorer.py
src/reporters/: __init__.py  reports.py
src/scouts/: __init__.py  base.py  producthunt.py  reddit.py  rss.py  twitter.py  websearch.py
src/tracker/: __init__.py  tracker.py
tests/: conftest.py  test_analyzers.py  test_auth.py  test_cli.py  test_database.py  test_scouts.py
web/: __init__.py
web/api/: __init__.py  auth.py  deps.py  main.py
web/api/db/: glean.db
web/api/routers/: auth.py  export.py  jobs.py  reports.py  settings.py  stats.py  tools.py
web/frontend/: .env.development  .env.production  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.tsx  api.ts  main.tsx  types.ts
web/frontend/src/components/: AudienceDisplay.tsx  ClaimList.tsx  CollapsibleSection.tsx  JobRow.tsx  Layout.tsx  ProtectedRoute.tsx  ReviewToolCard.tsx  ServiceCard.tsx  StatCard.tsx  ToolCard.tsx
web/frontend/src/contexts/: AuthContext.tsx
web/frontend/src/hooks/: useApi.ts
web/frontend/src/pages/: Dashboard.tsx  Jobs.tsx  Login.tsx  Review.tsx  Settings.tsx  Tools.tsx
